# c-webview-template

./: .gitmodules  CMakeLists.txt  CMakePresets.json
include/: error.hpp  exception.hpp
src/: CMakeLists.txt  main.cpp
web/: eslint.config.js  index.html  package.json  postbuild.ts  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/layouts/: DefaultLayout.tsx
web/src/pages/: ExamplePage.tsx  Home.tsx
web/src/types/: backend.d.ts
